--- a/assets/tailwind/output.css
+++ b/assets/tailwind/output.css
@@ -2298,6 +2298,10 @@ input:checked + .toggle-bg {
   padding: 2rem;
 }
 
+.p-0 {
+  padding: 0px;
+}
+
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
