--- a/assets/tailwind/output.css
+++ b/assets/tailwind/output.css
@@ -1332,6 +1332,11 @@ input:checked + .toggle-bg {
   margin-right: auto;
 }
 
+.ms-auto {
+  -webkit-margin-start: auto;
+          margin-inline-start: auto;
+}
+
 .mt-0 {
   margin-top: 0px;
 }
@@ -1382,6 +1387,16 @@ input:checked + .toggle-bg {
 
 .mt-\[40px\] {
   margin-top: 40px;
+}
+
+.ms-3 {
+  -webkit-margin-start: 0.75rem;
+          margin-inline-start: 0.75rem;
+}
+
+.ms-2 {
+  -webkit-margin-start: 0.5rem;
+          margin-inline-start: 0.5rem;
 }
 
 .block {
@@ -2298,10 +2313,6 @@ input:checked + .toggle-bg {
   padding: 2rem;
 }
 
-.p-0 {
-  padding: 0px;
-}
-
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -2610,6 +2621,10 @@ input:checked + .toggle-bg {
 
 .leading-tight {
   line-height: 1.25;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
 }
 
 .tracking-tight {
@@ -3550,6 +3565,10 @@ input:checked + .toggle-bg {
   .md\:border-gray-300 {
     --tw-border-opacity: 1;
     border-color: rgb(209 213 219 / var(--tw-border-opacity));
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
   }
 
   .md\:px-6 {
